# proclet

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-APACHE.md  LICENSE-MIT  LICENSE-MIT.md  LICENSE.md  README.md  TODO.md  build.rs
c/: proclet.h  sandbox.c  sandbox.h
src/: cli.rs  cursed.rs  env.rs  ffi.rs  fs.rs  gui.rs  lib.rs  log.rs  main.rs  supervisor.rs  wayland.rs
tests/: smoke.sh
