[package]
name = "proclet"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
build = "build.rs"

description = "Proclet — a tiny Linux process sandbox using namespaces (PID + mount + fresh /proc)."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/darko5r/proclet"
homepage = "https://github.com/darko5r/proclet"
keywords = ["linux", "sandbox", "security", "namespace", "rust"]
categories = ["os", "command-line-utilities", "development-tools::debugging"]

publish = false
exclude = ["dist/*", ".github/*"]

default-run = "proclet"

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }

[build-dependencies]
cc = "1.2.43"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
opt-level = 3

[profile.dev]
opt-level = 1
