[package]
name = "proclet"
version = "0.1.0"
edition = "2024"
authors = ["darko5r darko83@pm.me"]
description = "Lightweight Linux sandbox tool written in pure Rust using PID and mount namespaces."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/darko5r/proclet"
keywords = ["sandbox", "namespace", "linux", "isolation"]
categories = ["os", "system-programming", "command-line-utilities"]

[dependencies]
nix = { version = "0.29", features = ["mount", "sched", "process", "signal", "fs"] }
libc = { version = "0.2" }
clap = { version = "4.5.50", features = ["derive"] }

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
opt-level = "s"
