[package]
name = "proclet"
version = "0.1.1"
edition = "2024"
authors = ["darko5r <darko83@pm.me>"]
description = "Lightweight Linux sandbox tool written in pure Rust using PID and mount namespaces."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/darko5r/proclet"
keywords = ["sandbox", "namespace", "linux", "isolation"]
categories = ["os", "system-programming", "command-line-utilities"]

[dependencies]
nix = { version = "0.29", features = ["mount", "sched", "process", "signal", "fs"] }
libc = "0.2"
clap = { version = "4.5.50", features = ["derive"] }
mio = { version = "1", optional = true, features = ["os-poll", "os-ext"] }

[features]
# Default build
default = ["core"]

core = []

# Optional pieces, add later
net = []        # network namespace (CLONE_NEWNET)
ipc = []        # IPC namespace (CLONE_NEWIPC)
uts = []        # hostname isolation (CLONE_NEWUTS)
cgroups = []    # cgroup v2 limits
seccomp = []    # syscall filtering
debug = []      # extra logging / diagnostics
# feature for async/event-driven I/O
reactor = ["mio"]

full = ["core", "net", "ipc", "uts", "cgroups", "seccomp", "reactor"]

[profile.release]
opt-level = 3
lto = "fat" 
codegen-units = 1
strip = "symbols"
panic = "abort"
debug-assertions = false
overflow-checks = false
incremental = false
